# embedded-rust-sprinklers

./: Cargo.toml  partitions.csv  sdkconfig.defaults
app/client-app/: README.md  next.config.mjs  package-lock.json  package.json  tsconfig.json
app/client-app/app/: page.tsx
scripts/: test.js
src/: main.rs  root_html.rs
src/html_scripts/: syncTime.js
