[package]
name = "proy1esp32std"
version = "0.1.0"
authors = ["fernando"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "proy1esp32std"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.50", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
anyhow = "1"
shtcx = "1.0.0"
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"

[build-dependencies]
embuild = "0.33"